# podflow

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-28-podflow.md
docs/superpowers/specs/: 2026-06-28-podflow-design.md
podflow/: cli.py  digest.py  fetch.py  template.py
tests/: test_clean.py  test_cli.py  test_digest.py  test_fetch.py
