[project]
name = "podflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["yt-dlp", "anthropic", "openai", "feedparser"]

[project.scripts]
podflow = "podflow.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
